# PBPT

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  main.py
include/: common.hpp  geometry.hpp  image.hpp  material.hpp  math.hpp  optics.hpp  random.hpp  renderer.hpp  tensor.hpp
include/common/: algorithm.hpp  functional.hpp  iostream.hpp  utility.hpp
include/geometry/: binary_op.hpp  csg.hpp  occupation.hpp  primitive.hpp  transform.hpp  unary_op.hpp  utility.hpp
include/geometry/binary_op/: intersector.hpp  subtractor.hpp  unionizer.hpp
include/geometry/csg/: difference.hpp  enclosure.hpp  intersection.hpp  union.hpp
include/geometry/primitive/: cuboid.hpp  cylinder.hpp  ellipsoid.hpp  occupation.hpp  plane.hpp  primitive.hpp  sphere.hpp
include/geometry/transform/: rotation.hpp  translation.hpp
include/geometry/unary_op/: rotation.hpp  translation.hpp
include/image/: ppm.hpp
include/material/: dielectric.hpp  emissive.hpp  lambertian.hpp  material.hpp  metal.hpp  utility.hpp
include/math/: arithmetic.hpp
include/optics/: camera.hpp  ray.hpp
include/random/: distributions.hpp  generators.hpp  samplers.hpp  utility.hpp
include/renderer/: path_tracer.hpp
include/tensor/: matrix.hpp  tensor.hpp
src/: main.cpp
src/scene/: cornell.hpp  weekend.hpp
